--- a/web/public/css/TDC1/catalog.css
+++ b/web/public/css/TDC1/catalog.css
@@ -1,6 +1,8 @@
 #catalogTable {
-    width:100%;
+    width:98%;
     margin:1.0em 0.0em;
+    box-shadow: 0px 5px 15px 0px rgb(50,50,50);
+    border-radius: 10px;
 }
 #catalogTable th {
     background-color: rgb(131, 131, 131);
@@ -16,6 +18,12 @@
 }
 #catalogTable tr:last-child td {
     border-bottom: 1px solid rgb(131,131,131);
+}
+#catalogTable tr:last-child td:first-child {
+    border-radius:0px 0px 0px 10px;
+}
+#catalogTable tr:last-child td:last-child {
+    border-radius:0px 0px 10px 0px
 }
 #catalogTable td {
     padding:8px;
