--- a/src/tdc/UserBundle/Resources/views/Default/subscribe.html.twig
+++ b/src/tdc/UserBundle/Resources/views/Default/subscribe.html.twig
@@ -1,10 +1,10 @@
-{% extends 'tdcFrontEndBundle:Default:index.html.twig' %}
+{% extends 'tdcFrontEndBundle:Default:layout.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
     {% stylesheets  
      debug=true
-    'public/css/subscribe.css' 
+    'public/css/TDC1/subscribe.css' 
     %}
     <link href="{{ asset_url }}" rel="stylesheet" media="screen" />
     {% endstylesheets %}
@@ -90,7 +90,9 @@
                 </table>
                 </center>
         {% else %}
-            <p> Before you can subscribe you need to <a href="{{path("fos_user_registration_register")}}">register</a>. Its free!</p>
+            <div class="noRegisteredMsg" > 
+                <p> Before you can subscribe you need to <a href="{{path("fos_user_registration_register")}}">register</a> (Its free!)</p>
+                <p>or <a href="{{path("fos_user_security_login")}}">login</a></p>
         {% endif %}
 
     {% endblock body %}
