--- a/web/public/css/TDC1/faq.css
+++ b/web/public/css/TDC1/faq.css
@@ -6,11 +6,46 @@
     display:inline-block;
     padding:10px;
 }
-#faqIndex_hldr {
-    float:left;
-    background-color:rgb(230,230,230);
-    width:220px;
+#faqIndex_hldr,
+#faqContent_hldr {
+    width:218px;
+    border-radius: 10px;
+    margin-right:10px;
+    background-color: rgb(217, 217, 217);
+    border: 1px solid rgb(180, 180, 180);
+    box-shadow:0px 5px 15px 0px rgb(50,50,50);
+    vertical-align:top;
+    margin-bottom:20px;
+    text-shadow:0px 1px rgb(245,245,245);
 }
 #faqContent_hldr {
-    width:680px;
+    width:660px;
+    background-color:rgb(204,204,204);
+    margin-right:0px;
+}
+#faqIndex_hldr li {
+    font-size: 1.4em;
+}
+.question {
+    font-size: 1.3em;
+    font-style: italic;
+    color: rgb(0, 102, 255);
+}
+.focusBox {
+    padding: 10px;
+    background-color: rgb(210, 210, 210);
+    border: 2px dotted rgb(150, 150, 150);
+    border-image: initial;
+    border-radius: 10px;
+}
+.focusBox span {
+    text-align: center;
+    display: block;
+    margin: 10px auto;
+}
+
+h3 {
+    font-style:italic;
+    border-bottom:1px dotted black;
+    text-align:right;
 }
