--- a/web/public/css/TDC1/frontEnd.css
+++ b/web/public/css/TDC1/frontEnd.css
@@ -10,21 +10,15 @@
 #quote_hldr, #popularVideos_hldr,
 #latestQuestions {
     display:inline-block;
-    width:445px;
+    width:440px;
     height:250px;
-    background-color: rgba(250,250,250,0.5);
     padding:10px;
     border-radius:8px;
     vertical-align:top;
-
-    background: -moz-linear-gradient(top,  rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.5)), color-stop(100%,rgba(255,255,255,0)));
-    background: -webkit-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
-    background: -o-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
-    background: -ms-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
-    background: linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#00ffffff',GradientType=0 );
-
+    background-color:rgb(225,225,225);
+    border:1px solid rgb(180,180,180);
+    box-shadow:0px 5px 10px 0px rgb(50,50,50);
+    margin-bottom:15px;
 }
 #quote_hldr {
     margin-right:6px;
@@ -46,7 +40,37 @@
     font-style:italic;
     font-size:1.2em;
 }
+#topVideo_hldr,
+#latestQuestions_hldr {
+    height:180px;
+    border-radius: 0px 4px 4px 0px;
+    border:1px solid rgb(180,180,180);
+}
+#latestQuestions_hldr {
+    height:250px;
+}
+#topVideo_hldr li,
+#latestQuestions_hldr li {
+    margin:0px;
+    padding:6px 10px;
+    background-color:rgb(220,220,220);
+    border-bottom:1px dotted rgb(180,180,180);
+}
 #latestQuestions {
-    width:700px;
+    width:680px;
     height:300px;
+    margin-right:10px;
+    vertical-align:top;
+}
+
+#topVideo_hldr .jspDrag,
+#latestQuestions_hldr .jspDrag {
+    background-color: rgb(199, 199, 199);
+    box-shadow: inset 0px 1px 5px 0px rgb(70,70,70);
+}
+
+#topVideo_hldr .jspTrack,
+#latestQuestions_hldr .jspTrack {
+    background-color: rgb(230, 230, 230);
+    box-shadow: inset 0px 1px 5px 0px rgb(70,70,70);
 }
