--- a/src/tdc/QABundle/Resources/views/Default/view.html.twig
+++ b/src/tdc/QABundle/Resources/views/Default/view.html.twig
@@ -5,6 +5,7 @@
 
 {% block body %}
     > <a href="{{ path("tdc_qa_homepage")}}">Q & A</a>
+    <div id="questions_hldr">
         <div class="questionTitle">{{ question.title }}</div>
         <div class="questionText">{{question.text|raw}}</div>
         <div class="author">author: 
@@ -38,6 +39,7 @@
             {% set i = i + 1 %}
             {% endfor %}
         </div>
+    </div>
 {% endblock %}
 
 {% block sidebar %}
