removed icon field from video table

--- a/src/tdc/FrontEndBundle/Resources/views/Default/catalog.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/catalog.html.twig
@@ -49,7 +49,7 @@
                     <tr class="row_{{ cycle(['0', '1'], i) }}">
                         <td class="icon">
                             <a href="{{path("tdc_player_home",{'id':item.id})}}">
-                                <img src={{path("tdc_front_homepage")}}../public/images/videos/{{item.filepath}}_{{ item.icon }} />
+                                <img src={{path("tdc_front_homepage")}}../public/images/videos/{{item.filepath}}_icon.png />
                             </a>
                         </td>
                         <td class="info">
