working on random tag selection

--- a/app/Resources/views/TDC1/tagcloud.html.twig
+++ b/app/Resources/views/TDC1/tagcloud.html.twig
@@ -1,3 +1,4 @@
+{{tags|length}}
 {% for tag in tags %}
     <span class="tagcloud">
         <a href="{{path("tdc_qa_tagged",{'tag':tag.value})}}">{{tag.value|lower}}</a>
