--- a/src/tdc/FrontEndBundle/Resources/views/Default/item.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/item.html.twig
@@ -37,7 +37,7 @@
     {% if entity == "video" %}
     <div id="itemInfo_hldr">
         <div id="courseImage_hldr">
-            <img id="courseLargeIcon" src="{{ path('tdc_front_homepage') }}../public/images/videos/{{item.filepath}}_{{item.icon}}" />
+            <img id="courseLargeIcon" src="{{ path('tdc_front_homepage') }}../public/images/videos/{{item.filepath}}_icon.png" />
         </div>
         <div id="courseInfo_hldr">
             <div id="courseTitle">{{item.name}}
